# WQB_Expression_Validator

./: .env.template  .gitignore  LICENSE  MANIFEST.in  README.md  config.json  main.py  pyproject.toml  requirements.txt  test_all_cases.py  test_var_args.py
docs/: DATA_MANAGEMENT.md
examples/: README.md  basic_usage.py  batch_validation.py  web_api.py
scripts/: check_env.py  setup_dev_env.sh  test_api.py
tests/: __init__.py  conftest.py  test_all_cases.py  test_var_args.py
utils/: __init__.py  fetch_data.py  handle_data.py
validator/: grammar.lark  valid_ops.json  validator.py
wqb_validator/: __init__.py  cli.py  config.py  data_manager.py  exceptions.py  grammar.lark  valid_ops.json  validator.py
wqb_validator/utils/: __init__.py  fetch_data.py  handle_data.py  logger.py
